<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
<!--        <version>4.0.5</version>-->
        <version>3.5.13</version>
        <relativePath/> <!-- lookup parent from repository -->
    </parent>
    <groupId>org.leo</groupId>
    <artifactId>LeoAi</artifactId>
    <version>1.0.0</version>
    <packaging>pom</packaging>
    <name>LeoAI</name>
    <description>AI 驱动的后渗透管理平台</description>
    <url>https://github.com/cha0upup/LeoAI</url>
    <licenses>
        <license>
            <name>GNU General Public License v3.0</name>
            <url>https://www.gnu.org/licenses/gpl-3.0.html</url>
        </license>
    </licenses>
    <developers>
        <developer>
            <name>chaodovvn</name>
            <email>chaodovvn@gmail.com</email>
            <url>https://github.com/chaodovvn</url>
        </developer>
    </developers>
    <modules>

        <module>core</module>
        <module>dao</module>
        <module>javacore</module>
        <module>phpcore</module>
        <module>jmg</module>
        <module>service</module>
        <module>ai</module>
        <module>web</module>

    </modules>
    <scm>
        <connection>scm:git:https://github.com/cha0upup/LeoAI.git</connection>
        <developerConnection>scm:git:git@github.com:cha0upup/LeoAI.git</developerConnection>
        <tag>HEAD</tag>
        <url>https://github.com/cha0upup/LeoAI</url>
    </scm>
    <properties>
        <java.version>17</java.version>
        <mybatis.version>3.5.19</mybatis.version>
        <mybatis-spring-boot.version>3.0.5</mybatis-spring-boot.version>
        <sqlite-jdbc.version>3.41.2.2</sqlite-jdbc.version>
        <langchain4j.version>1.16.1</langchain4j.version>
    </properties>
    <dependencies>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-test</artifactId>
            <scope>test</scope>
        </dependency>
    </dependencies>
    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.mybatis</groupId>
                <artifactId>mybatis</artifactId>
                <version>${mybatis.version}</version>
            </dependency>
            <dependency>
                <groupId>org.mybatis.spring.boot</groupId>
                <artifactId>mybatis-spring-boot-starter</artifactId>
                <version>${mybatis-spring-boot.version}</version>
            </dependency>
            <dependency>
                <groupId>org.xerial</groupId>
                <artifactId>sqlite-jdbc</artifactId>
                <version>${sqlite-jdbc.version}</version>
            </dependency>
            <dependency>
                <groupId>dev.langchain4j</groupId>
                <artifactId>langchain4j-bom</artifactId>
                <version>${langchain4j.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

</project>
